--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java-version>1.8</java-version>
-        <janusgraph-version>0.2.0</janusgraph-version>
+        <janusgraph-version>0.5.3</janusgraph-version>
         <commons.lang3.version>3.3.1</commons.lang3.version>
     </properties>
 
@@ -44,6 +44,11 @@
             </dependency>
 
 
+            <dependency>
+                <groupId>org.janusgraph</groupId>
+                <artifactId>janusgraph-cql</artifactId>
+                <version>${janusgraph-version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.janusgraph</groupId>
                 <artifactId>janusgraph-berkeleyje</artifactId>
