--- a/janusgraph-import/pom.xml
+++ b/janusgraph-import/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>libthrift</artifactId>
             <version>0.13.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>30.0-jre</version>
+        </dependency>
 
 <!--        <dependency>
             <groupId>org.janusgraph</groupId>
